--- a/index.html
+++ b/index.html
@@ -17,15 +17,39 @@
             <li><a href="blog.html" tabindex="2" title="Blog">Blog</a></li>
         </ul>
     </nav>
-    <section>
-        <div>
-            <h1>This is a heading</h1>
-            <p>
-                This is section content
-            </p>
-        </div>
+    <section id="mainSection">
+        <article>
+            <figure><img src='./img/pic1.png' alt='Vlisco, E-commerce with a colourful story.' /></figure>
+            <h2>Vlisco</h2>
+            <figcaption>E-commerce with a colourful story.</figcaption>
+        </article>
+        <article>
+            <figure><img src='./img/pic2.png' alt='Copenhagen Airports, Knowing Your Customers in the Digital Age' /></figure>
+            <h2>Copenhagen Airports</h2>
+            <figcaption>Knowing Your Customers in the Digital Age</figcaption>
+        </article>
+        <article>
+            <figure><img src='./img/pic3.png' alt='TV4 Play, From TV channel to leading content provider' /></figure>
+            <h2>TV4 Play</h2>
+            <figcaption>From TV channel to leading content provider</figcaption>
+        </article>
+        <article>
+            <figure><img src='./img/pic4.png' alt='Audi City, How to purchase a real car with a virtual store' /></figure>
+            <h2>Audi City</h2>
+            <figcaption>How to purchase a real car with a virtual store</figcaption>
+        </article>
+        <article>
+            <figure><img src='./img/pic5.png' alt='Arla Foods, Dairy production in Big Data' /></figure>
+            <h2>Arla Foods</h2>
+            <figcaption>Dairy production in Big Data</figcaption>
+        </article>
+        <article>
+            <figure><img src='./img/pic6.png' alt="Xylem, Helping the world's largest water technology provider solve the global water crisis through Business Transformation."></figure>
+            <h2>Xylem</h2>
+            <figcaption>Helping the world's largest water technology provider solve the global water crisis through Business Transformation.</figcaption>
+        </article>
     </section>
-    <aside>
+    <aside id="sidebar">
         <ul>
             <li><a href="#" title="Menu Item 1">Menu Item 1</a></li>
             <li><a href="#" title="Menu Item 2">Menu Item 2</a></li>
