--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8"/>
     <title>UI test</title>
     <link rel="stylesheet" href="test.css">
 </head>
@@ -11,12 +12,12 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="index.html" tabindex="1" title="homepage" >Home</a></li>
+            <li><a href="about.html" tabindex="2" title="about us">About</a></li>
+            <li><a href="blog.html" tabindex="3" title="Blog">Blog</a></li>
         </ul>
     </nav>
-    <section>
+    <section id="mainSection">
         <div>
             <h1>This is a heading</h1>
             <p>
@@ -26,11 +27,11 @@
     </section>
     <aside>
         <ul>
-            <li><a href="#">Item 1</a></li>
-            <li><a href="#">Item 2</a></li>
-            <li><a href="#">Item 3</a></li>
-            <li><a href="#">Item 4</a></li>
-            <li><a href="#">Item 5</a></li>
+            <li><a href="#" title="Menu Item 1">Menu Item 1</a></li>
+            <li><a href="#" title="Menu Item 2">Menu Item 2</a></li>
+            <li><a href="#" title="Menu Item 3">Menu Item 3</a></li>
+            <li><a href="#" title="Menu Item 4">Menu Item 4</a></li>
+            <li><a href="#" title="Menu Item 5">Menu Item 5</a></li>
         </ul>
     </aside>
     <footer>
