--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="index.html" tabindex="0" title="homepage" >Home</a></li>
             <li><a href="about.html" tabindex="1" title="about us">About</a></li>
             <li><a href="blog.html" tabindex="2" title="Blog">Blog</a></li>
+            <li><a href="javascript:void(0)" id="sideBarLink" tabindex="3" title="Sidebar">Sidebar</a></li>
         </ul>
     </nav>
     <section id="mainSection">
